# wd-llm-caption-cli

./: .gitignore  CHANGLOG.md  MANIFEST.in  README.md  VERSION  caption.py  gui.py  pyproject.toml  requirements.txt  requirements_gui.txt  requirements_huggingface.txt  requirements_joy.txt  requirements_llm.txt  requirements_modelscope.txt  requirements_onnx_cu118.txt  requirements_onnx_cu12x.txt  requirements_wd.txt
configs/: default_joy.json  default_llama_3.2V.json  default_wd.json  uncensored_joy.json
utils/: download.py  image.py  inference.py  logger.py
wd_llm_caption/: caption.py  gui.py
wd_llm_caption/configs/: default_florence.json  default_joy.json  default_llama_3.2V.json  default_minicpm.json  default_qwen2_vl.json  default_wd.json  uncensored_joy.json
wd_llm_caption/utils/: download.py  image.py  inference.py  logger.py
